Changes to config

--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ permalink:           pretty
 # About/contact
 author:
   name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  url:               https://twitter.com/jakobwillforss
+  email:             jakob@jakobwillforss.com
 
 # Gems
 plugins:
