--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Setup
-title:               Lanyon
+title:               A new knowledge node
 tagline:             'A Jekyll theme, testing away'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 https://Jakob37.github.io/
+url:                 'http://Jakob37.github.io'
 # url:                 https://lanyon.getpoole.com
-baseurl:             https://Jakob37.github.io/
+baseurl:             'http://Jakob37.github.io/'
 paginate:            5
 permalink:           pretty
 
