Trying https again

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title:               A new knowledge node
 tagline:             'A Jekyll theme, testing away'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 'http://Jakob37.github.io'
+url:                 'https://Jakob37.github.io'
 # url:                 https://lanyon.getpoole.com
-baseurl:             'http://Jakob37.github.io/'
+baseurl:             'https://Jakob37.github.io/'
 paginate:            5
 permalink:           pretty
 
