--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:               A new knowledge node
-tagline:             'A Jekyll theme, testing away'
+tagline:             'A Jekyll theme, testing away .'
 description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:                 'https://Jakob37.github.io'
 # url:                 https://lanyon.getpoole.com
