--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               My bothy
 tagline:             'A place for me and others to visit what I thought and built'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+description:         'I like to think, to write, to build'
 url:                 http://lanyon.getpoole.com
 baseurl:             ''
 paginate:            5
@@ -9,9 +9,9 @@ permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Jakob Willforss
+  url:               https://www.jakobwillforss.com
+  email:             jakob@jakobwillforss.com
 
 # Gems
 plugins:
