Update the base

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:               My bothy
 tagline:             'A place for me and others to visit what I thought and built'
 description:         'I like to think, to write, to build'
-url:                 http://lanyon.getpoole.com
+url:                 https://jakob37.github.io
 baseurl:             ''
 paginate:            5
 permalink:           pretty
