Looking over books list

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Setup
-title:               My bothy
+title:               Forest hut
 tagline:             'A place for me and others to visit what I thought and built'
 description:         'I like to think, to write, to build'
 url:                 https://jakob37.github.io
